changed index again

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             <iframe id="resultFrame"></iframe>
         </div>
     </main>
+    <footer>
+        <p>powered by Zafar Saeed.</p>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
