some content changed in index.html file

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <h1>FlexCode Editor</h1>
+        <p> Hello! coders!<br/> This is a live code editer for you, here,<br/> You can write and view live result of your HTML/CSS/JAVASCRIPT code.</p>
     </header>
     <main>
         <div class="tabs">
@@ -24,6 +25,7 @@
     </main>
     <footer>
         <p>powered by Zafar Saeed.</p>
+        <p> Copyright 2024, All rights reserved.</p>
     </footer>
     <script src="script.js"></script>
 </body>
