immage to text conversion file added as a beta version

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         </div>
     </main>
     <footer>
+        <p> we're trying to acheve immage to text conversion for free for our users. click the link below to convert an immage to text,<br/> this is a beta version, and might not work proper. .<a href="itt.html"> try now!</a></p>
         <p>powered by Zafar Saeed.</p>
         <p> Copyright 2024, All rights reserved.</p>
     </footer>
