--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>FlexCode Editor</h1>
-        <p> Hello! coders!<br/> This is a live code editer for you, here,<br/> You can write and view live result of your HTML/CSS/JAVASCRIPT code.</p>
+        <p>Hello! coders!<br/> This is a live code editor for you, here,<br/> You can write and view live results of your HTML/CSS/JavaScript code.</p>
     </header>
     <main>
         <div class="tabs">
@@ -18,15 +18,16 @@
         </div>
         <div id="editor" class="tab-content">
             <textarea id="codeInput" placeholder="Write your HTML, CSS, and JavaScript here..."></textarea>
+            <button id="copyCodeButton" onclick="copyCode()">Copy Code</button>
         </div>
         <div id="result" class="tab-content">
             <iframe id="resultFrame"></iframe>
         </div>
     </main>
     <footer>
-        <p> we're trying to acheve immage to text conversion for free for our users. click the link below to convert an immage to text,<br/> this is a beta version, and might not work proper. .<a href="itt.html"> try now!</a></p>
-        <p>powered by Zafar Saeed.</p>
-        <p> Copyright 2024, All rights reserved.</p>
+        <p>We're trying to achieve image to text conversion for free for our users. Click the link below to convert an image to text,<br/> this is a beta version, and might not work properly. <a href="itt.html">Try now!</a></p>
+        <p>Powered by Zafar Saeed.</p>
+        <p>Copyright 2024, All rights reserved.</p>
     </footer>
     <script src="script.js"></script>
 </body>
