--- a/index.html
+++ b/index.html
@@ -9,23 +9,15 @@
 <body>
     <header>
         <h1>FlexCode Editor</h1>
-        <p>Hello! coders!<br/> This is a live code editor for you, here,<br/> You can write and view live results of your HTML/CSS/JavaScript code.</p>
+        <a href="livecode.html"> click here to access </a>
     </header>
     <main>
-        <div class="tabs">
-            <button class="tab-button" onclick="openTab(event, 'editor')">Code Editor</button>
-            <button class="tab-button" onclick="openTab(event, 'result')">Result</button>
-        </div>
-        <div id="editor" class="tab-content">
-            <textarea id="codeInput" placeholder="Write your HTML, CSS, and JavaScript here..."></textarea>
-            <button id="copyCodeButton" onclick="copyCode()">Copy Code</button>
-        </div>
-        <div id="result" class="tab-content">
-            <iframe id="resultFrame"></iframe>
-        </div>
+
+        <p>We're trying to achieve image to text conversion for free for our users. Click the link below to convert an image to text,<br/> this is a beta version, and might not work properly. <a href="itt.html">Try now!</a></p>
+
+
     </main>
     <footer>
-        <p>We're trying to achieve image to text conversion for free for our users. Click the link below to convert an image to text,<br/> this is a beta version, and might not work properly. <a href="itt.html">Try now!</a></p>
         <p>Powered by Zafar Saeed.</p>
         <p>Copyright 2024, All rights reserved.</p>
     </footer>
