--- a/itt.html
+++ b/itt.html
@@ -96,5 +96,9 @@
             });
         }
     </script>
+    <footer>
+        <p>Powered by Zafar Saeed.</p>
+        <p>Copyright 2024, All rights reserved.</p>
+    </footer>
 </body>
 </html>
