--- a/index.html
+++ b/index.html
@@ -8,19 +8,48 @@
 </head>
 <body>
     <header>
+        <p id="welcome-message">Welcome!<br/></p>
+        <p id="current-time"> </p>
         <h1>FlexCode Editor</h1>
-        <a href="livecode.html"> click here to access </a>
+        <a href="livecode.html">Click here to access</a>
     </header>
     <main>
-
         <p>We're trying to achieve image to text conversion for free for our users. Click the link below to convert an image to text,<br/> this is a beta version, and might not work properly. <a href="itt.html">Try now!</a></p>
-
-
     </main>
     <footer>
         <p>Powered by Zafar Saeed.</p>
         <p>Copyright 2024, All rights reserved.</p>
     </footer>
     <script src="script.js"></script>
+    <script>
+        function getTimeGreeting() {
+            var currentTime = new Date();
+            var hour = currentTime.getHours();
+
+            if (hour >= 6 && hour < 12) {
+                return "Good morning!";
+            } else if (hour >= 12 && hour < 18) {
+                return "Good afternoon!";
+            } else if (hour >= 18 && hour < 21) {
+                return "Good evening!";
+            } else {
+                return "Hello!";
+            }
+        }
+
+        function displayCurrentTime() {
+            var currentTime = new Date();
+            var dayName = currentTime.toLocaleString('en-US', { weekday: 'long' });
+            var timeString = currentTime.toLocaleTimeString();
+
+            var timeMessage = getTimeGreeting() + " " + timeString + " " + dayName;
+            document.getElementById("current-time").innerText = timeMessage;
+        }
+
+        // Call the function when the page loads
+        window.onload = function() {
+            displayCurrentTime();
+        }
+    </script>
 </body>
 </html>
