--- a/livecode.html
+++ b/livecode.html
@@ -26,7 +26,7 @@
     </main>
     <footer>
         <p>Powered by Zafar Saeed.</p>
-        <p>Copyright 2024, All rights reserved.</p>
+        <p>Copyright © 2024, All rights reserved.</p>
     </footer>
     <script src="script.js"></script>
 </body>
