updated html files, UI, and added site navigation menue for easy access.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     <header>
         <p id="welcome-message">Welcome!<br/></p>
         <p id="current-time"> </p>
+        <details id="navigations">
+        <summary> toggle site navigation </summary>
+            <h2> important links </h2>
+            <a href="livecode.html" target=_blank"> live code editer </a>
+            <a href="itt.html" target="_blank"> immage to text conversion </a>
+        </details>
+
         <h1>FlexCode Editor</h1>
         <a href="livecode.html">Click here to access</a>
     </header>
@@ -17,8 +24,8 @@
         <p>We're trying to achieve image to text conversion for free for our users. Click the link below to convert an image to text,<br/> this is a beta version, and might not work properly. <a href="itt.html">Try now!</a></p>
     </main>
     <footer>
-        <p>Powered by Zafar Saeed.</p>
-        <p>Copyright © 2024, All rights reserved.</p>
+        <p> developed by Zafar Saeed</p>
+        <p> &copy; 2024, All rights reserved</p>
     </footer>
     <script src="script.js"></script>
     <script>
