--- a/livecode.html
+++ b/livecode.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <a href="index.html"> home </a>
         <h1>FlexCode Editor</h1>
         <p>Hello! coders!<br/> This is a live code editor for you, here,<br/> You can write and view live results of your HTML/CSS/JavaScript code.</p>
     </header>
@@ -25,8 +26,9 @@
         </div>
     </main>
     <footer>
-        <p>Powered by Zafar Saeed.</p>
-        <p>Copyright © 2024, All rights reserved.</p>
+        <p> developed by Zafar Saeed</p>
+        <p>
+ &copy; 2024, All rights reserved</p>
     </footer>
     <script src="script.js"></script>
 </body>
