--- a/itt.html
+++ b/itt.html
@@ -29,6 +29,9 @@
     </style>
 </head>
 <body>
+    <header>
+        <a href="index.html"> home </a>
+    </header>
     <h1>Image to Text Converter</h1>
     <input type="file" id="imageUpload" accept="image/*">
     <div id="imageContainer"></div>
@@ -97,8 +100,8 @@
         }
     </script>
     <footer>
-        <p>Powered by Zafar Saeed.</p>
-        <p>Copyright © 2024, All rights reserved.</p>
+        <p> developed by Zafar Saeed</p>
+        <p> &copy; 2024, All rights reserved</p>
     </footer>
 </body>
 </html>
