UI and UX improved, the copy code and result buttons will not work if the code input field is empty.

--- a/livecode.html
+++ b/livecode.html
@@ -15,7 +15,7 @@
     <main>
         <div class="tabs">
             <button class="tab-button" onclick="openTab(event, 'editor')">Code Editor</button>
-            <button class="tab-button" onclick="openTab(event, 'result')">Result</button>
+            <button class="tab-button" id="resBtn" onclick="openTab(event, 'result')">Result</button>
         </div>
         <div id="editor" class="tab-content">
             <textarea id="codeInput" placeholder="Write your HTML, CSS, and JavaScript here..."></textarea>
